--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
     "dotenv": "^17.2.4",
-    "groq-sdk": "^0.37.0"
+    "groq-sdk": "^0.37.0",
+    "node-notifier": "^10.0.1"
   }
 }
