--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "chalk": "^5.6.2",
     "dotenv": "^17.2.4",
     "groq-sdk": "^0.37.0",
-    "node-notifier": "^10.0.1"
+    "node-notifier": "^10.0.1",
     "ollama": "^0.6.3"
   }
 }
